added some stuff
