# docs/greenlight/swagger.json
@@ -203,6 +203,39 @@
                     }
                 }
             }
+        },
+        "/v1/users/activated": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Activate an a user",
+                "parameters": [
+                    {
+                        "description": "Activation Token",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.activateUserHandler.Input"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/data.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -290,6 +323,14 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.activateUserHandler.Input": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
